[tool.poetry]
name = "pyredraw"
version = "0.1.0"
description = "A python package for resampling statistical operations"
authors = ["Elizabeth H. Camp"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
