[tool.poetry]
name = "pyredraw"
version = "0.2.2"
description = "A python package for resampling statistical operations"
authors = ["Elizabeth H. Camp"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = ">=3.6.2"
numpy = "1.23.5"
scipy = "1.8.1"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
pydevd = "2.8.0"
pytest-cov = "^4.0.0"
pandas = "^1.5.2"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
